Use 2.3.1-SNAPSHOT from maven repo, not from local lib in git repo.